# shakespearelang

./: .codeclimate.yml  .coveragerc  .gitignore  .python-version  CNAME  CONTRIBUTING.md  Gemfile  LICENSE  README.md  README.rst  _config.yml  index.md  mkdocs.yml  outputparser.py  profile_sierpinski.py  pyproject.toml  setup.py  shakespeare.ebnf  shakespeare.py  shakespeare_interpreter.py  shakespeare_parser.py  tox.ini  versions.json
.github/workflows/: main.yml
1.0/: 404.html  index.html  objects.inv  sitemap.xml
1.0/API/: index.html
1.0/CLI/: index.html
docs/: API.md  CLI.md  index.md
latest/API/: index.html
latest/CLI/: index.html
scripts/: compile_grammar.sh  profile_sierpinski.py  release.sh  visual_profile.sh
shakespearelang/: __init__.py  _character.py  _expression.py  _input.py  _operation.py  _parser.py  _preprocess.py  _repl.py  _settings.py  _state.py  _utils.py  character.py  cli.py  errors.py  input.py  output.py  parser.py  parser2.py  repl.py  settings.py  shakespeare.cleanpeg  shakespeare.ebnf  shakespeare.lark  shakespeare.py  shakespeare_interpeter.py  shakespeare_interpreter.py  shakespeare_parser.py  state.py  utils.py
shakespearelang/tests/: __init__.py  test_assignment.py  test_character_input.py  test_character_output.py  test_console.py  test_debugging.py  test_dramatis_personae.py  test_enter_and_exit.py  test_error_format.py  test_expressions.py  test_gotos.py  test_input_styles.py  test_numeric_input.py  test_numeric_output.py  test_output_styles.py  test_parse_error_format.py  test_repl.py  test_runtime_error_format.py  test_sample_plays.py  test_sample_programs.py  test_stacks.py  utils.py
shakespearelang/tests/integration/: test_repl.py  test_sample_plays.py
shakespearelang/tests/integration/sample_plays/: echo.spl  reverse.spl  sierpinski.spl
shakespearelang/tests/sample_plays/: catch.spl  hi.spl  parse_everything.spl
shakespearelang/tests/unit/: test_assignment.py  test_character_input.py  test_character_output.py  test_dramatis_personae.py  test_enter_and_exit.py  test_error_format.py  test_expressions.py  test_gotos.py  test_numeric_input.py  test_numeric_output.py  test_stacks.py
