[tool.poetry]
name = "shakespearelang"
version = "1.0.0"
description = "An interpreter for the Shakespeare Programming Language."
authors = ["Zeb Burke-Conte <zebburkeconte@gmail.com>"]
readme = "README.rst"
repository = "http://github.com/zmbc/shakespearelang"
homepage = "http://shakespearelang.com"
license = "MIT"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Topic :: Software Development :: Interpreters",
]

[tool.poetry.dependencies]
python = "^3.13"
click = "^8.1.8"
tatsu = "^5.13.1"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.2"
mkdocstrings = "^0.28.0"
pytest = "^8.3.4"
tox = "^4.24.1"
coverage = "^7.6.10"
black = "^25.1.0"
snakeviz = "^2.2.2"
pexpect = "^4.9.0"
mkdocs-click = "^0.8.1"
mike = "^2.1.3"

[tool.poetry.scripts]
shakespeare = "shakespearelang.cli:main"

[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"
